--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/js": "^5.8.55",
+    "@mdi/js": "5.8.55",
     "randomcolor": "^0.6.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
