--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/js": "5.8.55",
+    "file-saver": "^2.0.5",
     "randomcolor": "^0.6.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
@@ -20,6 +21,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
